# Fonky

./: .gitignore  404.html  README.md  __init__.py  archives.py  astronomical.py  boogr.py  cloud.py  collections.py  config.py  core.py  demographic.py  documents.py  environmental.py  fetchers.py  geospatial.py  health.py  index.html  loaders.py  mkdocs.yml  models.py  objects.inv  processors.py  pyproject.toml  requirements.txt  sample.txt  scrapers.py  web.py
api/astronomical/: index.html
api/boogr/: index.html
api/core/: index.html
api/demographic/: index.html
api/environmental/: index.html
api/loaders/: index.html
api/models/: index.html
api/processors/: index.html
api/scrapers/: index.html
api/web/: index.html
architecture/: index.html
configuration/: index.html
development/: index.html
docs/: architecture.md  configuration.md  development.md  getting-started.md  github-pages.md  index.md  logging.md  usage.md  user-guide.md
docs/api/: archives.md  astronomical.md  boogr.md  (+14 more)
fonky/: __init__.py  astronomical.py  boogr.py  cloud.py  collections.py  config.py  core.py  demographic.py  documents.py  environmental.py  fetchers.py  geospatial.py  loaders.py  models.py  scrapers.py  web.py
fonky.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
getting-started/: index.html
javascripts/: extra.js
logging/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
stylesheets/: extra.css
tools/: fetcher_tools.py  registry.py  schemas.py  serializers.py
usage/: index.html
user-guide/: index.html
(+34 files in other folders)
